@@ -2,6 +2,7 @@
  * Fix CQL parsing of collections when the column type is reversed (CASSANDRA-15814)
 Merged from 2.1:
  * Only allow strings to be passed to JMX authentication (CASSANDRA-16077)
+ * Nodetool compactionstats fails with NullPointerException (CASSANDRA-13021)
 
 2.2.17
  * Fix nomenclature of allow and deny lists (CASSANDRA-15862)
